[package]
name = "teedeelee"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "teedeelee"
crate-type = ["cdylib", "lib"]

[dependencies]
ahash = "0.8.11"
either = "1.9"
itertools = "0.14.0"
pyo3 = { version = "0.23.4", features = ["extension-module", "abi3-py38"] }
rand = "0.9.0"
serde = { version = "1.0.217", features = ["derive"] }
